# googleapiwrapper

./: README.md  pyproject.toml
googleapiwrapper/: googledrivewrapper.py  googleemailwrapper.py
tests/: test_googleapiwrapper.py
